<resources>
    <string name="app_name">LWT Demo</string>
    <string name="device_list_searching">Searching for devices</string>
    <string name="error_comm">Communication error</string>
    <string name="delay_on_time">on time</string>
    <string name="delay_minutes_format">%1$d min</string>
    <string name="vehicle_at_stop_prefix">"at "</string>
    <string name="vehicle_next_stop_prefix">"next stop "</string>
    <string name="vehicle_approaching_stop_prefix">"approaching "</string>
    <string name="zone_selection_confirm">Confirm selection</string>
    <string name="zone_selection_not_applicable">Not applicable</string>
    <string name="warning">Warning</string>
    <string name="zone_selection_warning_format">The ticket entitles you to travel in up to %1$d %2$s in total. Are you sure you wish to activate it just for the %3$s %4$s?</string>
    <string name="zone_selection_pid_title_prague">Prague</string>
    <string name="zone_selection_pid_title_outer">Region/Outer zones</string>
    <string name="zone_selection_pid_note_outer">Zones 10 and onwards are outside of the Central Bohemian region.</string>
    <string name="zone_selection_pid_note_prague">The P zone counts as two regular tariff zones.</string>
    <string name="zone_selection_pid_prompt">Choose zones</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="ticket_activation_confirm">Activate</string>
    <string name="ticket_activation_zone_choice_title">Choice of zones</string>
    <string name="ticket_activation_zone_choice_summary_auto">Automatically according to selected line</string>
    <string name="ticket_activation_title">Ticket activation</string>
    <string name="ticket_activation_activation_time_title">Validation time</string>
    <string name="ticket_activation_activation_time_summary_default">Determined by your choice of zones</string>
    <string name="ticket_activation_zone_choice_auto">Automatically by line</string>
    <string name="ticket_activation_zone_choice_manual">Choose manually</string>
    <string name="ticket_activation_zone_choice_summary_manual">Custom selection: %1$s</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_numeric_accusative_prefix">on</string>
    <string name="date_weekday_accusative_prefix">on</string>
    <string name="date_weekday_accusative">Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday</string>
    <string name="date_clock_accusative_prefix">at</string>
    <string name="date_clock_nominative_separator">,\u0020</string>
    <string name="now">Now</string>
    <string name="in_x_time_format">in %1$s</string>
    <string name="x_ago_time_format">%1$s ago</string>
    <string name="datetime_picker_min_time_exceeded">Selected time must be no sooner than %1$s.</string>
    <string name="ticket_activation_time_immediately">Immediately</string>
    <string name="ticket_activation_time_specify">At a specific time</string>
    <string name="ticket_activation_time_auto">Automatically by route</string>
    <string name="untrusted_dialog_dismiss">Close</string>
    <string name="untrusted_dialog_title">Verification error</string>
    <string name="untrusted_dialog_text">The selected service is being broadcasted using an invalid or untrusted certificate. You may be under attack. Please report this incident to your transport authority.</string>
    <string name="untrusted_debug_toast">Device not trusted! (debug override)</string>
    <string name="ticket_activation_activation_time_summary_immediately">Immediately after activation</string>
    <string name="vehicle_at_stop_title">At stop</string>
    <string name="vehicle_next_stop_title">Next stop</string>
    <string name="ticket_activation_depart_from_title"><small>Valid from:</small></string>
    <string name="trip_stop_picker_invalid_selection_title">Invalid selection</string>
    <string name="trip_stop_picker_invalid_selection_message">Please select a stop from the marked range.</string>
    <string name="ticket_activation_summary_initial">Choose your tariff zones or select a line from the list above to begin.</string>
    <string name="ticket_activation_for_zones_format">for %1$s %2$s</string>
    <string name="ticket_activation_summary_immediately">Ticket will become valid immediately after activation %1$s.</string>
    <string name="ticket_activation_summary_at_time">Ticket will become valid %1$s %2$s.</string>
    <string name="ticket_activation_summary_at_stop">Ticket will become valid with the departure of line %1$s from stop %2$s %3$s %4$s.</string>
    <string name="ticket_activation_confirm_title">Confirm activation</string>
    <string name="ticket_activation_confirm_message">%1$s Activation is irreversible. Do you wish to proceed?</string>
    <string name="ticket_activation_confirm_yes">Activate</string>
    <string name="ticket_activation_incompatible_line_ticket_title">Incompatible line</string>
    <string name="ticket_activation_incompatible_line_ticket_message">Your ticket is not applicable in any of the zones that the selected line visits. Please choose another.</string>
    <string name="ticket_activation_end_summary_time">You may use it for travel within the permitted zones until %1$s.</string>
    <string name="ticket_activation_end_summary_stop">On this line, it is valid for travel as far as %1$s, as well as elsewhere in the permitted zones until %2$s.</string>
    <string name="list_format_separator" translatable="false">", "</string>
    <string name="list_format_last_separator">" and "</string>
    <string name="list_format_serial_comma_policy">OXFORD</string>
    <string name="fast_activation_countdown_time_format" translatable="false">%d:%02d</string>
    <string name="fast_activation_infobox_title">Accelerated activation</string>
    <string name="fast_activation_infobox_message">Within the displayed time period, a ticket can be activated for the selected line without a security delay - it will become valid right away.</string>
    <string name="ticket_activation_confirm_in_progress">Activating</string>
    <string name="ticket_activation_error_title">Activation error</string>
    <string name="ticket_display_valid_since">Valid since</string>
    <string name="ticket_display_valid_until">Valid until</string>
    <string name="ticket_display_valid_duration">Duration</string>
    <string name="ticket_display_valid_zones">Zones</string>
    <string name="ticket_display_title">Your ticket</string>
    <string name="ticket_display_validity_ended">Past validity</string>
    <string name="ticket_display_activates_at_format">Validity starts %1$s</string>
    <string name="ticket_display_remaining_format">Remaining %1$s</string>
    <string name="cert_import_title">Certificate import</string>
    <string name="cert_import_finish">Finish and save</string>
    <string name="cert_import_step1_title">1. Choose a certificate</string>
    <string name="cert_import_step2_title">2. Verify details</string>
    <string name="cert_import_step2_default_text">No certificate is currently loaded.</string>
    <string name="cert_import_open_file">Open file</string>
    <string name="cert_import_password_prompt_title">Enter password</string>
    <string name="cert_import_password_prompt_message">This keystore appears to be password-protected. Please enter its password.</string>
    <string name="cert_import_password_prompt_message_incorrect">The password you have entered was not correct. Please try again.</string>
    <string name="error">Error</string>
    <string name="cert_import_error_desc">An unexpected error occurred while attempting to load the certificate.</string>
    <string name="cert_import_step2_loading">Loading certificate</string>
    <string name="cert_import_step2_desc_start">The keystore contains the following aliases:</string>
    <string name="cert_import_step2_desc_cert_entry_unknown_type">%1$s: unknown certificate (type %2$s)</string>
    <string name="cert_import_step2_desc_cert_entry_issuer_unknown">(unknown issuer)</string>
    <string name="cert_import_step2_desc_cert_entry_subject_unknown">(unknown subject)</string>
    <string name="cert_import_step2_desc_cert_entry">%1$s: certificate for %2$s issued by %3$s. Valid from %4$s to %5$s.</string>
    <string name="cert_import_step2_desc_cert_entry_has_private_key">A client signing key is available.</string>
    <string name="cert_import_step2_desc_key_entry">%1$s: signing key (%2$s/%3$s)</string>
    <string name="cert_import_step3_title">3. Choose the key to import</string>
    <string name="code_bad_format">Incorrect code format.</string>
    <string name="code_bad_checksum">Code checksum does not match.</string>
    <string name="code_camera_permission_rationale">In order to scan QR codes, ${app_name} requires permission to access your phone\'s camera.</string>
    <string name="code_not_compatible">This code is not compatible.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="camera_error_message">Failed to initialize camera integration.</string>
    <string name="ticket_inspection_title">Ticket inspection</string>
    <string name="ticket_inspection_sync_keys">Synchronize keys</string>
    <string name="ticket_inspection_scan_qr">Scan ticket (QR)</string>
    <string name="ticket_inspection_syncing_keys">Synchronizing…</string>
    <string name="ticket_inspection_invalid_format">Unrecognized QR code format</string>
    <string name="ticket_inspection_link_vehicle">Link with vehicle</string>
    <string name="ticket_inspection_vehicle_none">No vehicle linked</string>
    <string name="ticket_inspection_vehicle_update">Refresh info</string>
    <string name="ticket_inspection_toggle_razzia">Ticket control mode</string>
    <string name="cico_prerequisites_title">Prerequisites</string>
    <string name="cico_prerequisites_hardware_title">Supported hardware</string>
    <string name="cico_prerequisites_hardware_desc">CI/CO technology requires at least Bluetooth 4.0 with Low Energy support.</string>
    <string name="cico_prerequisites_bt_title">Bluetooth</string>
    <string name="cico_prerequisites_bt_state_desc_off">Bluetooth is off. Tap here to turn it on.</string>
    <string name="cico_prerequisites_location_title">Location</string>
    <string name="cico_prerequisites_location_desc_none">Location permissions are required to be able to communicate with vehicles. No location services will be used.</string>
    <string name="cico_prerequisites_notifications_title">Notifications</string>
    <string name="cico_prerequisites_notifications_desc_none">The app needs to be able to display a status notification while it is running in the background.</string>
    <string name="cico_prerequisites_battery_title">Power saving exemption</string>
    <string name="cico_prerequisites_battery_desc_none">Your OS has been detected to be able to unpredictably stop background services. Please exempt the app from power saving measures to prevent this from happening.</string>
    <string name="cico_prerequisites_done">Done</string>
    <string name="cico_prerequisites_bt_desc_none">Permission is needed to scan and connect to Bluetooth devices.</string>
    <string name="check_in_header">Your journey starts here.</string>
    <string name="check_in_instructions">Select a vehicle, then swipe to confirm your check-in. The rest is on us.</string>
    <string name="check_in_confirm">Check in</string>
    <string name="cico_prerequisites_bg_location_title">Background location</string>
    <string name="cico_prerequisites_bg_location_desc_none">In order to be able to scan for vehicles with the screen off, the app needs permission to access your location in the background. Your precise location will not be used.</string>
</resources>