<?xml version="1.0" encoding="utf-8"?>
<cz.spojenka.android.ui.helpers.CoordinatorLayoutFix xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:marginWindowInsets="top|horizontal">

    <ScrollView
        android:id="@+id/svZonesWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:paddingWindowInsets="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fab_top_offset">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvZonesPrague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:cardElevation="@dimen/zone_picker_card_elevation"
                app:contentPadding="@dimen/section_margin_normal">

                <LinearLayout
                    android:id="@+id/llPragueItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zone_selection_pid_title_prague"
                        android:textSize="@dimen/text_title_m" />

                    <TextView
                        android:id="@+id/tvPragueDoubleZoneNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zone_selection_pid_note_prague" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvZonesOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/section_margin_normal"
                app:contentPadding="@dimen/section_margin_normal"
                app:cardElevation="@dimen/zone_picker_card_elevation"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:id="@+id/llRegionItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zone_selection_pid_title_outer"
                        android:textSize="@dimen/text_title_m" />

                    <TextView
                        android:id="@+id/tv_region_foreign_zones_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zone_selection_pid_note_outer" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabConfirm"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fab_height"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_bottom_offset"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:marginWindowInsets="all"
        android:text="@string/zone_selection_confirm"
        app:icon="@drawable/ic_check_24px" />
</cz.spojenka.android.ui.helpers.CoordinatorLayoutFix>